# Echo

./: .coveragerc  .dockerignore  .env.example  .git-sync-config.yml  .gitignore  .gitmodules  360_READINESS_ASSESSMENT.md  AI_COMPARISON.md  API_TEST_SUITE.md  ARCHITECTURE.md  ARCHITECTURE_HIERARCHY.md  ARSENAL_CATALOG.md  AUTOMATED_TEST_SUMMARY.md  CHANGELOG.md  CHATGPT_INSTRUCTIONS.md  CHATGPT_RESPONSES.md  CLAUDE_INSTRUCTIONS.md  CLAUDE_RESPONSES.md  COMPARISON_ANALYSIS.md  CONSTITUTIONAL_SYSTEM_SUMMARY.md  CONSTRAINED_MYSTICAL_FRAMEWORK.md  CONTINUATION_GUIDE.md  CONTRIBUTING.md  CURATOR.yaml  DAY_1_COMPLETION_REPORT.md  DAY_2_PLAN.md  DEEPSEEK_CORRECTED_RESPONSES.md  DEEPSEEK_INSTRUCTIONS.md  DEEPSEEK_RESULTS.md  DELIVERY_SUMMARY.md  DEPLOYMENT-REPORT.md  DEPLOYMENT.md  DEPLOY_ALL_MARKETING.ps1  DIGITAL_TOLL_ROAD_BLUEPRINT.md  DIMENSIONAL_SUMMARY.md  Dockerfile  ECHONATE_MANUS_INTEGRATION.md  ECHO_LIBRARY_README.md  ECHO_LIFE_OS_MASTER_REPORT.md  ECHO_LIFE_OS_OCTOPUS_REPORT.md  (+102 more)
.github/: CODEOWNERS  DEVIL_AUDIT_REPORT.md  HONEST_VALUATION.md  LANGUAGE_CORRECTIONS.md  PRODUCT_DEFINITION.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
AI_SHARED/: GRAND_MASTER_REPORT.md  GRAND_MASTER_REPORT_UPDATED.md  README.md  TEST1_AUTHORITY_BOUNDARY_RESULTS.md  TEST2_TEMPORAL_INTEGRITY_RESULTS.md  TEST3_DEPENDENCY_POISONING_RESULTS.md  TEST4_EDR001_INTEGRATION_RESULTS.md  TEST5_EXPLOIT_CHAIN_RESULTS.md  TEST_EXECUTION_SEQUENCE.md  TEST_RESULTS_POST_PHASE0.md
Aletheia/: AletheiaOrchestrator.ps1  README.md
E.X.O.D.U.S./: README.md  manifest.txt
EchoCouncil/: USAGE.md
EchoLifeOS/: EchoLifeOS.ps1  ROADMAP.md
NDA/: NDA_IMPLEMENTATION_GUIDE.md
PHOENIX/: README.md
agent-university/: QUICKSTART.md  README.md
agents/: README.md
aletheia/: MASTER_INDEX.json  README.md  __init__.py  aletheia.py  demo.py  requirements.txt
aletheia_agi/: __init__.py  aletheia.py  config.py
api/: README.md
app/: __init__.py  app.py  calculators.py  config.py  credit_parser.py  legal_knowledge.py  letter_generator.py  main.py  models.py  trust_fund.py
art-of-proof/: README.md
artifacts/: EDR-001.json  GOVERNANCE_VIOLATION_001.json  cleanup_report_2026-01-08.md  cleanup_report_2026-01-09.md
automation/: CAMPAIGN_README.md  README.md  cross_platform_sync.py  daily_report.py  latest_report.html  new_year_campaign.py  octopus_system.py  reply_detector.py  self_teaching_template.py
benchmarks/: phoenix_global_latency_results.json
biology/: README.md
class-action-settlements/: CLOSEOUT_SUMMARY.md  FINAL_EXECUTION_REPORT.md  MASTER_INDEX.md  PROJECT_COMPLETION_CERTIFICATE.md  README.md  class_actions.json  class_actions_report.txt
config/: __init__.py  agents.yaml  boundaries.yaml  default.json  default.yaml  echo.yaml  levels.yaml  master_repo_blueprint.yaml  prometheus.yml  settings.py
connectors/: README.md
coordination/: system_health.json  tasks.jsonl
core/: README.md
core-engines/: README.md
css/: styles.css
data/: social_intelligence_report.md  unclaimed_property.json  voice_profile.json
deploy/: DEPLOYMENT.md  docker-compose.yml  render.yaml  vercel.json
docs/: AGENT_ZERO_ARCHITECTURE.md  ARCHITECTURE.md  AUTONANTE_FULL_ECHO_MODE_README.md  BEST_PRACTICES_ANALYSIS.md  BUSINESS_GUIDE.md  CODE_IMPLEMENTATION_CHECKLIST.md  ECHO_FORGE.md  ECHO_LIFE_OS_ARCHITECTURE.md  ECHO_LIFE_OS_VISION.md  ECHO_MASTER_INDEX_vOmega.md  ECHO_MILITARY_DOCTRINE_v1.md  EXECUTIVE_SUMMARY.md  GETTING_STARTED.md  IMPROVEMENTS_SUMMARY.md  INVESTOR_DECK.md  MANUS_CREDIT_OPTIMIZATION.md  OCMS_SPECIFICATION.json  OCTOPUS_REPORT.md  QUICKSTART.md  README.md  REVERSE_ENGINEERED_ROADMAP.md  SAFETY.md  SECURITY.md  SETUP.md  TESTING.md  USAGE.md
due-diligence/: INDEX.md  README.md
echo/: __init__.py  orchestrator.py
echo-engines/: README.md
echo-git-sync/: .gitignore
echo-os/: README.md
echo-vault/: README.md
echo_engine/: __init__.py  cli.py  config.py
echo_harmonic_learning/: __init__.py  example.py
echolex/: __init__.py  config.py  main.py
ecp-core/: README.md  README_ENFORCEMENT.md  test.sh
emergent_behavior/: EMERGENT_BEHAVIOR_IMPLEMENTATION.md
epistemic_footprint/: footprint.jsonl
ethics_dimmer/: __init__.py  boundaries_engine.py  controller.py  orchestrator.py  output_generator.py  reasoning_amplifier.py  risk_modeler.py
examples/: README.md  __init__.py  basic_investigation.py  content_generation.py  ecommerce_automation.py  legal_compliance.py  quick_start.py  swarm_pentest.py
execution/: ECHODNS_DEPLOYMENT_GUIDE.md  ECHODNS_EMAIL_OUTREACH.md  ECHOUNIVERSE_LANDING_PAGE_GUIDE.md  IMMEDIATE_EXECUTION_PLAYBOOK.md  PARALLEL_EXECUTION_TIMELINE.md
finance/: README.md
foundations/: README.md
frankenstein/: ACTIVATION_INSTRUCTIONS.md  frankenstein_core.py
frontend/: index.html
global-cortex/: cortex-node.js
global-nexus/: 72_HOUR_EXECUTION_PLAN.md  AL9_STRATEGIC_ANALYSIS.md  ECHO_UNIVERSE_TRANSFORMATION_STRATEGY.md  ENTERPRISE_PARTNERSHIP_STRATEGY.md  PRESENTATION_SCRIPT.md  README.md  STATUS_OPERATION_REPORT.md
governance/: README.md
hiring/: HEAD_OF_ENGINEERING_JD.md
hydra/: __init__.py  config.py  main.py
influence/: AI_PERSONA_RULESET.md  CANONICAL_POSTS.md  HOMEPAGE_COPY.md
integrations/: README.md  agent_zero_bridge.py  test_bridge.py
intelligence-organism/: README.md
intelligence-reports/: ECHONATE_INTELLIGENCE_BRIEF_2026-01-21.md  spiral-analysis-20260122-0119.md  spiral-analysis-20260122-0627.md  spiral-analysis-20260122-1237.md  spiral-analysis-20260122-1825.md  spiral-analysis-20260123-0117.md  spiral-analysis-20260123-0627.md  spiral-analysis-20260123-1236.md  spiral-analysis-20260123-1826.md  spiral-analysis-20260124-0114.md  spiral-analysis-20260124-0624.md  spiral-analysis-20260124-1230.md  spiral-analysis-20260124-1822.md  spiral-analysis-20260125-0124.md  spiral-analysis-20260125-0625.md  spiral-analysis-20260125-1232.md  spiral-analysis-20260125-1822.md  spiral-analysis-20260126-0123.md  spiral-analysis-20260126-0629.md  spiral-analysis-20260126-1236.md  spiral-analysis-20260126-1827.md  (+8 more)
sdk/rust/: Cargo.toml  README.md
(+2147 files in other folders)
