[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "echo-life-os"
version = "0.1.0"
description = "Persistent, personal digital intelligence system"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Nathan Poinsette", email = "nathan@echo.dev"}
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["ai", "personal-assistant", "life-os", "multi-agent", "memory"]

dependencies = [
    "python-dotenv>=1.0.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-anthropic>=0.2.0",
    "langgraph>=0.2.0",
    "chromadb>=0.5.0",
    "cryptography>=42.0.0",
    "aiohttp>=3.9.0",
    "aiosqlite>=0.20.0",
    "pydantic>=2.6.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]
financial = [
    "plaid-python>=23.0.0",
]
all = [
    "echo-life-os[dev,financial]",
]

[project.scripts]
echo = "echo_life_os.cli:main"

[project.urls]
Homepage = "https://github.com/nathanpoinsette/echo-life-os"
Documentation = "https://echo-life-os.readthedocs.io"
Repository = "https://github.com/nathanpoinsette/echo-life-os"
Issues = "https://github.com/nathanpoinsette/echo-life-os/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.ruff_cache
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=src --cov-report=term-missing"
