[package]
name = "echo-nexus"
version = "0.1.0"
edition = "2021"
authors = ["Nathan Poinsette"]
description = "Echo Nexus - Distributed Intelligence Platform"
license = "MIT"
repository = "https://github.com/onlyecho822-source/Echo"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha3 = "0.10"
blake3 = "1.5"
ed25519-dalek = "2.0"
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "benchmarks"
harness = false
